Updated a few things.

--- a/Spell Editor/Views/Shared/_Layout.cshtml
+++ b/Spell Editor/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                     <li>@Html.ActionLink("Dread Powers", "Index", "DreadPower")</li>
                     <li>@Html.ActionLink("Essence Shaping", "Index", "EssenceShaping")</li>
                     <li>@Html.ActionLink("Fetishes", "Index", "Fetish")</li>
+                    <li>@Html.ActionLink("Hexes And Boons", "Index", "FateHexBoons")</li>
                     <li>@Html.ActionLink("Moon Facets", "Index", "MoonFacet")</li>
                     <li>@Html.ActionLink("Gifts", "Index", "Gift")</li>
                     <li>@Html.ActionLink("Grimoires", "Index", "Grimoire")</li>
