--- a/Spell Editor/Views/Spell/Index.cshtml
+++ b/Spell Editor/Views/Spell/Index.cshtml
@@ -70,7 +70,7 @@
                     else {
                         currentLevel = parseInt(splitLevel[1]);
                     }
-                    if (currentLevel >= level) {
+                    if (currentLevel == level) {
                         return true;
                     }
                     else {
