Modified create & edit views to be more flexible to prevent errors in the event domain name changes.

--- a/Spell Editor/Views/Artifact/Edit.cshtml
+++ b/Spell Editor/Views/Artifact/Edit.cshtml
@@ -101,7 +101,7 @@
         $("#addAttainment").on('click', function () {
             $.ajax({
                 async: false,
-                url: '/Artifact/AddAttainment',
+                url: './AddAttainment',
                 success: function (partialView) {
                     $('#attainmentInfo').append(partialView);
                 }
