--- a/Spell Editor/Views/Imbued/Create.cshtml
+++ b/Spell Editor/Views/Imbued/Create.cshtml
@@ -101,7 +101,7 @@
         $("#addSpell").on('click', function () {
             $.ajax({
                 async: false,
-                url: '/Imbued/AddSpell',
+                url: './AddSpell',
                 success: function (partialView) {
                     $('#spellInfo').append(partialView);
                 }
@@ -111,7 +111,7 @@
         $("#addItemEnhancement").on('click', function () {
             $.ajax({
                 async: false,
-                url: '/Imbued/AddItemEnhancement',
+                url: './AddItemEnhancement',
                 success: function (partialView) {
                     $('#itemEnhancementInfo').append(partialView);
                 }
