--- a/Spell Editor/Views/Spell/Create.cshtml
+++ b/Spell Editor/Views/Spell/Create.cshtml
@@ -60,7 +60,7 @@
     $('#addArcana').on('click', function () {
         $.ajax({
             async: false,
-            url: '/Spell/AddNewArcana'
+            url: './AddNewArcana'
         }).success(function (partialView) {
             $('#arcanainfo').append(partialView);
         });
@@ -69,7 +69,7 @@
     function deleteFunction(id) {
         if (id > 0) {
             $.ajax({
-                url: '/Spell/DeleteArcana?id=' + id
+                url: './DeleteArcana?id=' + id
             });
         }
     }
