--- a/Spell Editor/Views/Grimoire/Create.cshtml
+++ b/Spell Editor/Views/Grimoire/Create.cshtml
@@ -78,7 +78,7 @@
     $('#addRote').on('click', function () {
         $.ajax({
             async: false,
-            url: '/Grimoire/AddSpell'
+            url: './AddSpell'
         }).success(function (partialView) {
             $('#spellinfo').append(partialView);
         });
