Made all tables scrollable. Fixed a few issues discovered with adding and removing enhancements to artifacts/imbued items.

--- a/Spell Editor/Views/Artifact/Index.cshtml
+++ b/Spell Editor/Views/Artifact/Index.cshtml
@@ -39,6 +39,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#ArtifactTable').DataTable();
+        var table = $('#ArtifactTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
