--- a/Spell Editor/Views/Attainment/Index.cshtml
+++ b/Spell Editor/Views/Attainment/Index.cshtml
@@ -26,6 +26,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#AttainmentTable').DataTable();
+        var table = $('#AttainmentTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
