--- a/Spell Editor/Views/Imbued/Index.cshtml
+++ b/Spell Editor/Views/Imbued/Index.cshtml
@@ -46,6 +46,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#ImbuedTable').DataTable();
+        var table = $('#ImbuedTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
