--- a/Spell Editor/Views/Merit/Index.cshtml
+++ b/Spell Editor/Views/Merit/Index.cshtml
@@ -35,6 +35,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#MeritTable').DataTable();
+        var table = $('#MeritTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
