--- a/Spell Editor/Views/Manifestations/Index.cshtml
+++ b/Spell Editor/Views/Manifestations/Index.cshtml
@@ -25,6 +25,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#MainfestationsTable').DataTable();
+        var table = $('#MainfestationsTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
