--- a/Spell Editor/Views/Rites/Index.cshtml
+++ b/Spell Editor/Views/Rites/Index.cshtml
@@ -31,6 +31,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#RiteTable').DataTable();
+        var table = $('#RiteTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
