--- a/Spell Editor/Views/Sight/Index.cshtml
+++ b/Spell Editor/Views/Sight/Index.cshtml
@@ -33,6 +33,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#SightTable').DataTable();
+        var table = $('#SightTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
