--- a/Spell Editor/Views/Skill/Index.cshtml
+++ b/Spell Editor/Views/Skill/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table id="SkillTable" class="table webgrid-table">
+<table id="SkillTable" class="table webgrid-table" width="100%" style="table-layout: fixed;">
     <thead>
         <tr class="webgrid-header">
             <th>Skill Action</th>
@@ -22,7 +22,7 @@
         {
             <tr class="webgrid-row-style">
                 <td>@item.Name</td>
-                <td>@item.Description</td>
+                <td style="width: 700px !important; overflow: hidden;">@item.Description</td>
                 <td>
                     @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
@@ -35,6 +35,11 @@
 
 @section Scripts {
     <script type="text/javascript">
-        var table = $('#SkillTable').DataTable();
+        var table = $('#SkillTable').DataTable({
+            deferRender: true,
+            scroller: true,
+            scrollY: "233px",
+            processing: true
+        });
     </script>
 }
